refactor: image url만 받게 수정